NDOF pan doesn't work in Camera view #93666

Closed
opened 2021-12-04 20:45:25 +01:00 by Dan McLaughlin · 7 comments

System Information
Operating system: Win10
Graphics card: 3090

Blender Version
Broken: 3.0
Worked: N/A

Short description of error
When using NDOF (e.g. 3DConnexion 3D mouse) and in camera view, panning doesn't work. This is very useful for Grease Pencil among other applications. With a 3D mouse you can lock rotations so only pan is transmitted, however Blender doesn't use pan in Camera view so it doesn't work. You have to be in Front view to get panning.

Exact steps for others to reproduce the error

  • File -> New -> 2D Animation
  • Try panning with a NDOF such as the 3D Connexion. Rotation should be turned off which can be done with the Enterprise, or just via preferences in the 3DConnexion app for Blender. Do that, move around but nothing happens. Go instead to front orthographic and pan - works fine.
**System Information** Operating system: Win10 Graphics card: 3090 **Blender Version** Broken: 3.0 Worked: N/A **Short description of error** When using NDOF (e.g. 3DConnexion 3D mouse) and in camera view, panning doesn't work. This is very useful for Grease Pencil among other applications. With a 3D mouse you can lock rotations so only pan is transmitted, however Blender doesn't use pan in Camera view so it doesn't work. You have to be in Front view to get panning. **Exact steps for others to reproduce the error** - File -> New -> 2D Animation - Try panning with a NDOF such as the 3D Connexion. Rotation should be turned off which can be done with the Enterprise, or just via preferences in the 3DConnexion app for Blender. Do that, move around but nothing happens. Go instead to front orthographic and pan - works fine.
Author

Added subscriber: @DrMc

Added subscriber: @DrMc
Member

Added subscribers: @ideasman42, @OmarEmaraDev

Added subscribers: @ideasman42, @OmarEmaraDev
Member

@ideasman42 Can you check this if you have the hardware?

@ideasman42 Can you check this if you have the hardware?

Added subscriber: @Sergey

Added subscriber: @Sergey

I can not reproduce the issue on Windows 10, Blender 3.2 beta, and space navigator mouse.

I can not reproduce the issue on Windows 10, Blender 3.2 beta, and space navigator mouse.

This issue was referenced by 51975b89ed

This issue was referenced by 51975b89edfcc02131f1f8248e1b3442ea2778fa

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2022-02-18 07:10:53 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93666
No description provided.